fix: fixed modal content overflowed
- fixed modal content overflowed, when the very long english
  word fill in Modal title

--- a/components/modal/style/modal.less
+++ b/components/modal/style/modal.less
@@ -91,6 +91,7 @@
     padding: 24px;
     font-size: @font-size-base;
     line-height: @line-height-base;
+    word-wrap: break-word;
   }
 
   &-footer {
